.metadata/.plugins/org.eclipse.cdt.ui/main.build.log
09:41:49 **** Incremental Build of configuration Debug for project main ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\main.o" "..\\src\\main.c" 
..\src\main.c: In function 'main':
..\src\main.c:28:16: warning: implicit declaration of function 'obtenerRango' [-Wimplicit-function-declaration]
       opciones=obtenerRango("\nSeleciones una opcion 1-7", 1, 7);
                ^~~~~~~~~~~~
..\src\main.c:40:9: error: expected ';' before '}' token
         }
         ^
..\src\main.c:45:8: error: expected ';' before '}' token
        }
        ^
..\src\main.c:51:6: error: expected ';' before '}' token
      }
      ^
..\src\main.c:57:6: error: expected ';' before '}' token
      }
      ^
..\src\main.c:63:9: error: expected ';' before '}' token
         }
         ^

09:41:49 Build Failed. 5 errors, 1 warnings. (took 159ms)

